--- a/mod04_css/aula15_tamanho/index.html
+++ b/mod04_css/aula15_tamanho/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Aula 15 - Tamanho</title>
 </head>
 <body>
     <div id="elem1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque tempora quaerat harum praesentium dolor animi, doloribus consequatur alias reprehenderit ut quia sit veritatis repellat molestias minima iure aut, eius dolore.</div>
