--- a/mod04_css/aula16_margem_padding/index.html
+++ b/mod04_css/aula16_margem_padding/index.html
@@ -8,9 +8,9 @@
     <title>Aula 16 - Margin e Padding</title>
 </head>
 <body>
-    <nav>
+    <nav class="fundo">
         <div id="bloco1">Bloco 1</div>
-        <div id="bloco2">Bloco 2</div>
+        <div id="bloco2">Bloco 2 - Testes de mais texto e mais textos para a quebra de linha e possamos ver a distância entre os elementos.</div>
     </nav>
 </body>
 </html>
